# Arcane

./: .gitignore  CMakeLists.txt  GenerateProjects.bat
Arcane/Source/Application/: CMakeLists.txt  GameApp.cpp  GameApp.h
Arcane/Source/Core/: Assert.cpp  Assert.h  Base.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Core.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Type.h  Utility.h  Window.cpp  Window.h
Arcane/Source/Engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h
Arcane/Source/Graphics/: CMakeLists.txt  GraphicsDevice.cpp  GraphicsDevice.h
Arcane/Source/Platform/DirectX/: CMakeLists.txt  DirectXGraphicsDevice.cpp  DirectXGraphicsDevice.h
Arcane/Source/Platform/OpenGL/: CMakeLists.txt  OpenGLGraphicsDevice.cpp  OpenGLGraphicsDevice.h  OpenGLProc.cpp  OpenGLProc.h
Arcane/Source/Platform/OpenGL/api/: glcorearb.h  glxext.h  wglext.h
Arcane/Source/Platform/Vulkan/: CMakeLists.txt  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h
Arcane/Source/Scene/: CMakeLists.txt  Scene.cpp  Scene.h
Examples/Sandbox/: CMakeLists.txt  Main.cpp
natvis/: CoreStorage.natvis
